--- a/styles.css
+++ b/styles.css
@@ -109,19 +109,19 @@ p {
     align-items: center;
 }
 
-@media screen (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
     .container {
         max-width: 1064px;
     }
 }
 
-@media screen (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .container {
         max-width: 768px;
     }
 }
 
-@media screen (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .container {
         max-width: none;
         display: grid;
